--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Tips and tricks on offensive security especially active directory privilege escalation techniques using bloodyAD.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://cravaterouge.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: @rouge_cravate
+twitter_username: rouge_cravate
 github_username:  CravateRouge
 
 # Build settings
