Add french content

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -40,8 +40,8 @@ cascade:
 ############################
 
 defaultContentLanguage: en
-hasCJKLanguage: false
-defaultContentLanguageInSubdir: false
+hasCJKLanguage: true
+defaultContentLanguageInSubdir: true
 removePathAccents: true
 
 ############################
