--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -41,7 +41,7 @@ cascade:
 
 defaultContentLanguage: en
 hasCJKLanguage: true
-defaultContentLanguageInSubdir: true
+defaultContentLanguageInSubdir: false
 removePathAccents: true
 
 ############################
