Remove pic bg and add baidu verif

--- a/config/_default/params.fr.yaml
+++ b/config/_default/params.fr.yaml
@@ -27,7 +27,7 @@ marketing:
     pirsch: ''
   verification:
     google: ''
-    baidu: ''
+    baidu: 'codeva-84l1iAxRFf'
 
 # Site header
 header:
