--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -26,7 +26,7 @@ marketing:
     pirsch: ''
   verification:
     google: ''
-    baidu: ''
+    baidu: 'codeva-84l1iAxRFf'
 
 # Site header
 header:
