--- a/config/_default/params.zh.yaml
+++ b/config/_default/params.zh.yaml
@@ -26,7 +26,7 @@ marketing:
     pirsch: ''
   verification:
     google: ''
-    baidu: ''
+    baidu: 'codeva-84l1iAxRFf'
 
 # Site header
 header:
@@ -38,7 +38,7 @@ header:
     logo:
       text: ""
       # Logo filename in `assets/media/` folder
-      filename: "logo-zh.jpg"
+      filename: "logo-zh.png"
     button:
       enable: true
       text: "联络我们"
