--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -3,6 +3,10 @@
 # Documentation: https://docs.hugoblox.com/
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
+i_am_a_sponsor: true
+power_ups:
+  hide_published_with: true
+  
 # Appearance
 appearance:
   mode: light
