Add announcement banner

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -28,6 +28,7 @@ cascade:
     header:
       navbar:
         enable: true
+    announcement: true
   # Blog section options
   - _target:
       path: /articles/*
