Add Integration Service

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -14,7 +14,10 @@ en:
       - name: Services
         weight: 30
         url: "#services"
-      #   hasChildren: true
+        hasChildren: true
+      - parent: Services
+        name: M365 & Azure Integration
+        url: /services/integration
       # - parent: Services
       #   name: Phishing Simulation
       #   url: /services/phishing
@@ -36,6 +39,10 @@ fr:
       - name: Services
         url: "#services"
         weight: 30
+        hasChildren: true
+      - parent: Services
+        name: Intégration M365 & Azure
+        url: /services/integration
       - name: Articles
         url: /articles
         weight: 40
@@ -68,6 +75,10 @@ zh:
       - name: 服务
         url: "#services"
         weight: 30
+        hasChildren: true
+      - parent: 服务
+        name: M365 & Azure 集成
+        url: /services/integration
       - name: 文章
         url: /articles
         weight: 40
