change pic and update to tailwind 6.0.1

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -22,7 +22,7 @@ cascade:
     editable: true
   - target:
       path: "{/reference,/reference/**,/authors,/authors/**,/services}"
-    _build:
+    build:
       render: never
   - target:
       path: "{/privacy,/terms,/services/**}"
