--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -29,7 +29,7 @@ marketing:
 header:
   navbar:
     enable: true
-    blox: "navbar"
+    block: "navbar"
     align: "center"
     fixed_to_top: true
     logo:
