--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
     "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/typography": "^0.5.10",
     "tailwindcss": "^4.1.12"
+    "pagefind": "^1.4.0"
   }
 }
